Completed Sass demo for live site. Fised number of bugs on IE and Firefox browsers

--- a/app/styles/_cards.scss
+++ b/app/styles/_cards.scss
@@ -1,161 +1,152 @@
-$card-width : 75px;
-$card-height : 105px;
+/*THE BASIC SETUP*/
 
-$initial-position-bottom : 565px;
-$initial-position-right : 30px;
+$initial-position-bottom: 700px;
+$initial-position-right: 300px;
 
-$final-position-right : 650px;
-$final-position-bottom : -90px;
+$final-position-right: 630px;
+$final-position-bottom: -80px;
 
 #demo-frame{
-	width:700px;
-	height:700px;
+	width: 700px;
+	height: 700px;
 	border: 1px solid #e5e5e5;
-	position:relative;
-	overflow:hidden;
-}
-
-.card{
-	width:$card-width;
-	height:$card-height;
-	background: red;
-	border: 1px solid #fff;
-	position:absolute;
-	right:$initial-position-right;
-	bottom:$initial-position-bottom;
-	transform: perspective(200px) rotateX(60deg);
-	perspective-origin: 50% 75%;
-}
-
-
-@mixin lie-cards-flat() {
-	transform: rotate(60deg) skew(-30deg, -30deg);
-}
-
-@mixin stand-cards-up() {
-	transform: rotate(15deg) skew(15deg, 15deg);
-}
-
-$j: 52;
-
-$flat-bottom : $final-position-bottom + 165;
-
-@for $i from 1 through 5 {
+	position: relative;
+	overflow: hidden;
+	background: #000;
 	
-	$standup-count-limit : $j - (6 - ( $i - 1));
-	$position-right : ;
-	
-	@while $j > $standup-count-limit {
+	.card{
+		width: 75px;
+		height: 105px;
+		background: #ffcf00;
+		border: 4px solid #fff;
+		position: absolute;
+		right: $initial-position-right;
+		bottom: $initial-position-bottom;
+		border-radius: 5px;
+		background-image: url("../images/background.png");
+	}
 
-		$cardNo : $j - $standup-count-limit;
-		$card-bottom-position : $final-position-bottom + (108 * $i);
-		$card-right-position : $final-position-right - (45 * ($i - 1) ) - (90px * $cardNo); 
+	/*THE PYRAMID LOGIC*/
+	
+	@mixin lie-cards-flat() {
+		transform: rotate( 60deg ) skew( -30deg, -30deg );
+	}
+	
+	@mixin stand-cards-up() {
+		transform: rotate( 15deg ) skew( 15deg, 15deg );
+	}
+	
+	$j: 52;
+	
+	@for $i from 1 through 5 {
 		
-		$zIndex : 52 - $j;
+		$position: $i - 1;
+		
+		$standup-count-limit: $j - ( 6 - $position );
+		
+		@while $j > $standup-count-limit {
 	
-	 	@keyframes movecard-#{$j} {
-	    	50% {
-	    		bottom: $card-bottom-position;
-	    		right: $card-right-position;
-	    		z-index: $zIndex;
-	    	}
-	    	75% {
-	    		bottom: $card-bottom-position;
-	    		right: $card-right-position;
-	    		transform: rotate(15deg);
-	    		z-index: $zIndex;
-	    	}
-	    	100% {
-	    		bottom: $card-bottom-position;
-	    		right: $card-right-position;
-	    		@include stand-cards-up();
-	    		z-index: $zIndex;
-	    	}
+			$cardNo: $j - $standup-count-limit;
+			$card-bottom-position: $final-position-bottom + (108 * $i);
+			$card-right-position: $final-position-right - ( 45 * $position ) - ( 90px * $cardNo ); 
+		
+		 	@keyframes movecard-#{$j} {
+		    	50% {
+		    		bottom: $card-bottom-position;
+		    		right: $card-right-position;
+		    	}
+		    	75% {
+		    		bottom: $card-bottom-position;
+		    		right: $card-right-position;
+		    		transform: rotate( 15deg );
+		    	}
+		    	100% {
+		    		bottom: $card-bottom-position;
+		    		right: $card-right-position;
+		    		@include stand-cards-up();
+		    	}
+			}
+			$j: $j - 1;
 		}
-		$j: $j - 1;
-	}
-	
-	$flat-count-limit : $j - (5 - ( $i - 1));
-	
-	@while $j > $flat-count-limit {
-
-		$cardNo : $j - $flat-count-limit;
-		$card-right-position : $final-position-right - (90px * $cardNo); 
 		
-		$card-row-bottom-position : $flat-bottom + (107 * ($i - 1));
-		$card-row-right-position : $card-right-position - (45 * ($i - 1) ) - 40px;
-
-		$zIndex : 52 - $j;
-
- 		@keyframes movecard-#{$j} {
-    		50% {
-    			bottom: $card-row-bottom-position;
-    			right: $card-row-right-position;
-    			z-index: $zIndex
-    		}
-    		75% {
-    			bottom: $card-row-bottom-position;
-    			right: $card-row-right-position;
-    			z-index: $zIndex;
-   			}
-    		100% {
-    			bottom: $card-row-bottom-position;
-    			right: $card-row-right-position;
-    			z-index: $zIndex;
-    			@include lie-cards-flat();
-    		}
-    	}
-  		$j: $j - 1;
+		$flat-count-limit: $j - ( 5 - $position );
+		
+		@while $j > $flat-count-limit {
+	
+			$cardNo: $j - $flat-count-limit;
+			$card-bottom-position: ( $final-position-bottom + 165 ) + ( 107 * $position );
+			$card-right-position: ( $final-position-right - ( 90px * $cardNo ) ) - ( 45 * $position ) - 40px;
+	
+	 		@keyframes movecard-#{$j} {
+	    		50% {
+	    			bottom: $card-bottom-position;
+	    			right: $card-right-position;
+	    		}
+	    		75% {
+	    			bottom: $card-bottom-position;
+	    			right: $card-right-position;
+	   			}
+	    		100% {
+	    			bottom: $card-bottom-position;
+	    			right: $card-right-position;
+	    			@include lie-cards-flat();
+	    		}
+	    	}
+	  		$j: $j - 1;
+		}
 	}
-}
-
-@mixin card-template($card-no, $animation-delay) {
- 	bottom: $initial-position-bottom + $card-no; 
- 	animation: movecard-#{$card-no} 5s forwards;
- 	animation-delay: $animation-delay;
-}
-
-
-@for $j from 18 through 52 {
-  #card-#{$j} { 
-  	@include card-template($j,#{(52 -$j)}s);
-  }
-}
-
-
-@keyframes movecard-17 {
-	75% {
-		bottom: 560px;
-		right: 290px;
-		z-index: 52;
-		transform: rotate(15deg) skew(15deg, 15deg);
+	
+	@mixin card-template($card-no, $animation-delay) {
+	 	bottom: $initial-position-bottom + $card-no; 
+	 	animation: movecard-#{$card-no} 5s forwards;
+	 	animation-delay: $animation-delay;
+	 	z-index: 52 - $card-no;
 	}
-	100% {
-		bottom: 557px;
-		right: 331px;
-		z-index: 52;
-		transform: rotate(7deg) skew(23deg, 23deg);
+	
+	
+	@for $j from 18 through 52 {
+	  #card-#{$j} { 
+	  	@include card-template( $j, #{(52 -$j)}s );
+	  }
 	}
-}
-
-@keyframes movecard-16 {
-	75% {
-		bottom: 560px;
-		right: 380px;
-		z-index: 51;
-		transform: rotate(15deg) skew(15deg, 15deg);
+	
+	/* THE TRIANGLE ON TOP THE CARD PYRAMID */
+	
+	@keyframes movecard-17 {
+		75% {
+			bottom: 560px;
+			right: 290px;
+			z-index: 52;
+			transform: rotate( 15deg ) skew( 15deg, 15deg );
+		}
+		100% {
+			bottom: 567px;
+			right: 302px;
+			z-index: 52;
+			transform: rotate( 7deg ) skew( 23deg, 23deg );
+		}
 	}
-	100% {
-		bottom: 556px;
-		right: 355px;
-		z-index: 53;
-		transform: rotate(20deg) skew(10deg, 10deg);
+	
+	@keyframes movecard-16 {
+		75% {
+			bottom: 560px;
+			right: 320px;
+			z-index: 53;
+			transform: rotate( 15deg ) skew( 15deg, 15deg );
+		}
+		100% {
+			bottom: 567px;
+			right: 325px;
+			z-index: 53;
+			transform: rotate( 20deg ) skew( 10deg, 10deg );
+		}
 	}
-}
-#card-16 { 
-  	@include card-template(16,34s);
-}
-
-#card-17 { 
-  	@include card-template(17,35s);
+	
+	#card-16 { 
+	  	@include card-template( 16, 34s );
+	}
+	
+	#card-17 { 
+	  	@include card-template( 17,35s );
+	}
 }
